--- a/package.json
+++ b/package.json
@@ -1,39 +1,39 @@
 {
-  "name": "rkb4",
-  "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
-  "scripts": {
-    "dev": "webpack-dev-server -d --inline --hot --env.dev",
-    "build": "rimraf ./dist && webpack -p --progress --hide-modules"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+ssh://git@github.com/solpie/RKB4.git"
-  },
-  "author": "",
-  "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/solpie/RKB4/issues"
-  },
-  "homepage": "https://github.com/solpie/RKB4#readme",
-  "dependencies": {},
-  "devDependencies": {
-    "babel-core": "^6.25.0",
-    "babel-loader": "^7.0.0",
-    "css-loader": "^0.28.4",
-    "element-ui": "^1.3.5",
-    "file-loader": "^0.11.2",
-    "html-loader": "^0.4.5",
-    "html-webpack-plugin": "^2.28.0",
-    "rimraf": "^2.6.1",
-    "style-loader": "^0.18.2",
-    "url-loader": "^0.5.8",
-    "vue": "^2.3.4",
-    "vue-loader": "^12.2.1",
-    "vue-resource": "^1.3.4",
-    "vue-template-compiler": "^2.3.4",
-    "webpack": "^2.6.1",
-    "webpack-dev-server": "^2.4.5"
-  }
+    "name": "rkb4",
+    "version": "1.0.0",
+    "description": "",
+    "main": "index.js",
+    "scripts": {
+        "dev": "webpack-dev-server -d --inline --hot --env.dev",
+        "build": "rimraf ./dist && webpack -p --progress --hide-modules"
+    },
+    "repository": {
+        "type": "git",
+        "url": "git+ssh://git@github.com/solpie/RKB4.git"
+    },
+    "author": "",
+    "license": "ISC",
+    "bugs": {
+        "url": "https://github.com/solpie/RKB4/issues"
+    },
+    "homepage": "https://github.com/solpie/RKB4#readme",
+    "devDependencies": {
+        "babel-core": "^6.25.0",
+        "babel-loader": "^7.0.0",
+        "babel-preset-es2015": "^6.24.1",
+        "css-loader": "^0.28.4",
+        "element-ui": "^1.3.5",
+        "file-loader": "^0.11.2",
+        "html-loader": "^0.4.5",
+        "html-webpack-plugin": "^2.28.0",
+        "rimraf": "^2.6.1",
+        "style-loader": "^0.18.2",
+        "url-loader": "^0.5.8",
+        "vue": "^2.3.4",
+        "vue-loader": "^12.2.1",
+        "vue-resource": "^1.3.4",
+        "vue-template-compiler": "^2.3.4",
+        "webpack": "^2.6.1",
+        "webpack-dev-server": "^2.4.5"
+    }
 }
