pack socketio and proxy ws

--- a/.gitignore
+++ b/.gitignore
@@ -34,11 +34,11 @@ build/Release
 
 # Dependency directories
 node_modules/
-jspm_packages/
+build/
 
 # Typescript v1 declaration files
 typings/
-
+*.pyc
 # Optional npm cache directory
 .npm
 
