--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "start": " python src/server/RKB.py",
     "pack": "pyinstaller src/server/RKB.py -F --upx-dir c:/bin/upx391w --noupx",
     "pack2": "pyinstaller src/server/RKB.spec -F --upx-dir c:/bin/upx391w --noupx",
-    "build": "rimraf ./dist/static && webpack -p --progress --hide-modules"
+    "build": "rimraf ./dist/static/views && webpack -p --progress --hide-modules"
   },
   "repository": {
     "type": "git",
@@ -21,6 +21,7 @@
   },
   "homepage": "https://github.com/solpie/RKB4#readme",
   "devDependencies": {
+    "@types/pixi.js": "^4.4.4",
     "babel-core": "^6.25.0",
     "babel-loader": "^7.0.0",
     "babel-preset-es2015": "^6.24.1",
@@ -29,10 +30,13 @@
     "file-loader": "^0.11.2",
     "html-loader": "^0.4.5",
     "html-webpack-plugin": "^2.28.0",
+    "pixi.js": "^4.5.2",
     "rimraf": "^2.6.1",
+    "script-loader": "^0.7.0",
     "socket.io": "^2.0.2",
     "socket.io-client": "^2.0.2",
     "style-loader": "^0.18.2",
+    "tween.js": "^16.6.0",
     "url-loader": "^0.5.8",
     "vue": "^2.3.4",
     "vue-loader": "^12.2.1",
