--- a/src/server/.cfg
+++ b/src/server/.cfg
@@ -1,5 +1,7 @@
 [server]
 port = 8088
 debug = true
+reqHeaders = Content-Type,Accept
+resHeaders = Content-Type
 index = admin
 dbPath = "../../dist/db/"
