--- a/src/server/package.json
+++ b/src/server/package.json
@@ -1,10 +1,14 @@
 {
+    "scripts": {
+        "start": "nodemon server.js"
+    },
     "dependencies": {
         "express": "^4.15.3",
         "socket.io": "^2.0.3",
         "xhr2": "^0.1.4"
     },
     "devDependencies": {
-        "nodemon": "^1.11.0"
+        "nodemon": "^1.11.0",
+        "ts-node": "^3.0.6"
     }
 }
