--- a/server/package.json
+++ b/server/package.json
@@ -1,18 +1,17 @@
 {
-    "main": "index.js",
-
-    "scripts": {
-        "start": ".\electron-v1.6.11-win32-x64\electron.exe .",
-        "start2": "nodemon server.js"
-    },
-    "dependencies": {
-        "body-parser": "^1.17.2",
-        "express": "^4.15.3",
-        "nedb": "^1.8.0",
-        "socket.io": "^2.0.3",
-        "xhr2": "^0.1.4"
-    },
-    "devDependencies": {
-        "nodemon": "^1.11.0"
-    }
+  "main": "index.js",
+  "scripts": {
+    "start2": "nodemon server.js"
+  },
+  "dependencies": {
+    "body-parser": "^1.17.2",
+    "express": "^4.15.3",
+    "nedb": "^1.8.0",
+    "requestify": "^0.2.5",
+    "socket.io": "^2.0.3",
+    "xhr2": "^0.1.4"
+  },
+  "devDependencies": {
+    "nodemon": "^1.11.0"
+  }
 }
