--- a/package.json
+++ b/package.json
@@ -44,5 +44,8 @@
     "vue-template-compiler": "^2.3.4",
     "webpack": "^2.6.1",
     "webpack-dev-server": "^2.4.5"
+  },
+  "dependencies": {
+    "pixi-filters": "^2.0.2"
   }
 }
