--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "webpack-dev-server": "^2.4.5"
   },
   "dependencies": {
-    "pixi-filters": "^2.0.2"
+    "pixi-filters": "^2.0.2",
+    "requestify": "^0.2.5"
   }
 }
